# forex-signal-bot

./: .env.example  .gitignore  Dockerfile  README.md  demo_analysis.py  deploy-manual.sh  deploy.sh  docker-compose.yml  pyproject.toml  run.sh
src/forex_signal/: __init__.py  config.py  main.py
src/forex_signal/bot/: handlers.py  middleware.py
src/forex_signal/db/: __init__.py  base.py  models.py  repository.py
src/forex_signal/scheduler/: __init__.py  broadcast.py
src/forex_signal/services/: analysis_service.py  data_service.py  formatter.py  indicators.py  sentiment.py  signal_service.py
