[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-signal-bot"
version = "1.0.0"
description = "Telegram bot for forex market sentiment and technical analysis with trading signals"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "aiogram>=3.13,<4.0",
    "httpx[http2]>=0.27,<0.30",
    "requests>=2.32,<3.0",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=2.1",
    "vaderSentiment>=3.3",
    "pydantic>=1.10,<3.0",
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.4,<26.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
]

[project.scripts]
forex-signal-bot = "forex_signal.main:run"

[tool.setuptools.packages.find]
where = ["src"]
